Fixed single media items being clipped in a vertically small viewport.

--- a/beatonma-gulp/src/apps/main/js/apps/media-viewer/_media-carousel.scss
+++ b/beatonma-gulp/src/apps/main/js/apps/media-viewer/_media-carousel.scss
@@ -2,14 +2,13 @@
 @use "v2/objects";
 @use "sass:math";
 
-
 %-carousel-nav-button {
   @extend %scrim-colors;
   @include core.transition((filter));
 
   margin: var(--space);
   aspect-ratio: 1;
-  filter: brightness(.85);
+  filter: brightness(0.85);
 
   &:focus-visible {
     outline-color: var(--vibrant);
@@ -24,7 +23,7 @@
 .media-carousel {
   @extend %full-bleed;
 
-  max-width: 100vw;
+  max-width: 100svw;
   line-height: 1;
 
   button {
@@ -33,12 +32,11 @@
 
   &--focussed {
     @extend %center;
-    @extend %shape-medium-top;
+    @extend %shape-adaptive-medium-top;
 
     overflow: clip;
-    max-height: 80vh;
+    max-height: 80svh;
     aspect-ratio: 1;
-    background-color: var(--background);
     position: relative;
 
     @include core.on-medium-width {
@@ -53,8 +51,13 @@
          no internal navigation -> static content ->  no need to fix the
          background as any particular size/shape.
        */
-      height: auto;
-      aspect-ratio: auto;
+      @extend %shape-adaptive-medium;
+      aspect-ratio: unset;
+
+      > .media {
+        max-height: 90svmin;
+        background-color: transparent;
+      }
     }
 
     > .media {
@@ -81,7 +84,11 @@
   }
 
   &--items {
-    @include core.row($horizontal: flex-start, $gap: var(--space), $wrap: nowrap);
+    @include core.row(
+      $horizontal: flex-start,
+      $gap: var(--space),
+      $wrap: nowrap
+    );
 
     margin-block: var(--space);
     margin-inline: auto;
@@ -111,7 +118,6 @@
     }
   }
 }
-
 
 dialog.media-viewer-full {
   .media-carousel {
